adding how to run javafx